<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.perdian.apps.tagtiger</groupId>
    <artifactId>tagtiger</artifactId>
    <version>2.0.0-SNAPSHOT</version>

    <name>MP3 TagTiger</name>
    <description>Editor for ID3 tags</description>
    <url>https://github.com/perdian/tagtiger</url>

    <scm>
        <url>https://github.com/perdian/tagtiger</url>
        <connection>scm:git:https://github.com/perdian/tagtiger.git</connection>
        <developerConnection>scm:git:https://github.com/perdian/tagtiger.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>perdian</id>
            <name>Christian Robert</name>
            <email>dev@perdian.de</email>
        </developer>
    </developers>

    <properties>
        <commons-lang3.version>3.7</commons-lang3.version>
        <commons-text.version>1.4</commons-text.version>
        <logback.version>1.2.3</logback.version>
        <jaudiotagger.version>2.0.3</jaudiotagger.version>
        <slf4j.version>1.7.25</slf4j.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org</groupId>
            <artifactId>jaudiotagger</artifactId>
            <version>${jaudiotagger.version}</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>9</source>
                    <target>9</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.perdian.apps.tagtiger.TagTigerApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <finalName>tagtiger</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>macos-bundle</id>
            <build>
                <resources>
                    <resource>
                        <directory>src/main/resources</directory>
                    </resource>
                    <resource>
                        <directory>src/bundle/macos/resources</directory>
                    </resource>
                </resources>
                <plugins>
                    <plugin>
                        <groupId>sh.tak.appbundler</groupId>
                        <artifactId>appbundle-maven-plugin</artifactId>
                        <version>1.2.0</version>
                        <configuration>
                            <mainClass>de.perdian.apps.tagtiger.TagTigerApplication</mainClass>
                            <generateDiskImageFile>true</generateDiskImageFile>
                            <jvmVersion>9+</jvmVersion>
                            <iconFile>tagtiger.icns</iconFile>
                            <additionalResources>
                                <additionalResource>
                                    <directory>${project.basedir}</directory>
                                    <include>LICENSE.txt</include>
                                    <include>CREDITS.txt</include>
                                </additionalResource>
                                <additionalResource>
                                    <directory>${project.basedir}/src/bundle/macos/distribution</directory>
                                </additionalResource>
                            </additionalResources>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>bundle</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
